--- a/apps/hq/templates/hq/no_permission.html
+++ b/apps/hq/templates/hq/no_permission.html
@@ -5,7 +5,7 @@
 {% if request.user.is_authenticated %}
 <a href="/accounts/logout">Log out and sign in as a different user.</a>
 {% else %}
-<a href="/accounts/login">Log in to CommcareHQ</a>
+<a href="/accounts/login">Log in to CommTrack</a>
 {% endif %}
 {% block org_content %}
 {%endblock%}
